Actualiza conceptos y valores de cableado para SFCR

--- a/diapos/SFCR_ConceptosGenerales.tex
+++ b/diapos/SFCR_ConceptosGenerales.tex
@@ -1,4 +1,4 @@
-% Created 2018-01-08 lun 14:43
+% Created 2018-01-08 lun 19:59
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -48,12 +48,12 @@
 \maketitle
 
 \section{Sistemas Fotovoltaicos de Conexión a Red}
-\label{sec:org586c01e}
+\label{sec:orgb5860a7}
 
 \subsection{Definición}
-\label{sec:orgdcc79e8}
+\label{sec:orgcc353d2}
 
-\begin{frame}[label={sec:org61d01c9}]{Definición de un SFCR}
+\begin{frame}[label={sec:org1360eb8}]{Definición de un SFCR}
 \begin{block}{}
 Un Sistema Fotovoltaico Conectado a la Red (SFCR) es un sistema cuya
 función es producir energía eléctrica en condiciones adecuadas para
@@ -66,8 +66,8 @@ poder ser inyectada en la red convencional.
 \end{frame}
 
 \subsection{Mecanismos de Retribución}
-\label{sec:org1bc33c5}
-\begin{frame}[label={sec:org1b7d439}]{Mecanismos de retribución}
+\label{sec:org62ca59b}
+\begin{frame}[label={sec:orgfc15e9e}]{Mecanismos de retribución}
 \begin{itemize}
 \item La energía producida por este sistema será consumida parcial o totalmente en las cercanías, y la energía sobrante será inyectada en la red para su distribución a otros puntos de consumo.
 
@@ -81,7 +81,7 @@ poder ser inyectada en la red convencional.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5f3419b}]{Retribución con prima}
+\begin{frame}[label={sec:org9185de7}]{Retribución con prima}
 \begin{itemize}
 \item \alert{Ingresos} por la \alert{energía total producida} (independientemente de la que
 haya sido consumida en las cercanías del SFCR).
@@ -93,7 +93,7 @@ tomar en consideración los consumos cercanos.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb7d11c6}]{Balance neto}
+\begin{frame}[label={sec:org82498e0}]{Balance neto}
 \begin{itemize}
 \item \alert{Compensa los saldos de energía eléctrica} entre el SFCR y un sistema de consumo asociado.
 
@@ -107,8 +107,8 @@ tomar en consideración los consumos cercanos.
 
 
 \subsection{SFCR en suelo y en edificación}
-\label{sec:org84200ae}
-\begin{frame}[label={sec:org1327699}]{Características distintivas sobre suelo y en edificación}
+\label{sec:org9e78e8c}
+\begin{frame}[label={sec:orgec2c33a}]{Características distintivas sobre suelo y en edificación}
 \begin{itemize}
 \item \alert{Sobre suelo}
 
@@ -135,7 +135,7 @@ o son elementos constituyentes de la composición arquitectónica
 \end{frame}
 
 
-\begin{frame}[label={sec:org233896b}]{SFCR sobre suelo}
+\begin{frame}[label={sec:org5693e37}]{SFCR sobre suelo}
 \begin{itemize}
 \item \alert{Objetivo}: maximizar la producción energética anual del sistema con
 el menor coste y la menor ocupación de terreno posibles
@@ -157,13 +157,13 @@ empleado).
 \end{frame}
 
 
-\begin{frame}[label={sec:org9c88cb1}]{Estructuras sobre suelo}
+\begin{frame}[label={sec:orge002655}]{Estructuras sobre suelo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EstructuraEstaticaSuelo.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org3540cd2}]{SFCR sobre suelo: seguimiento}
+\begin{frame}[label={sec:org6e714d7}]{SFCR sobre suelo: seguimiento}
 \begin{itemize}
 \item \alert{Fundamento:}
 
@@ -179,7 +179,7 @@ mejores aprovechamientos del terreno.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org86e04bb}]{SFCR sobre suelo: seguimiento}
+\begin{frame}[label={sec:org9f5e324}]{SFCR sobre suelo: seguimiento}
 \begin{itemize}
 \item \alert{Doble eje}
 
@@ -211,20 +211,20 @@ necesarios),
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc6b78d3}]{Seguidor de eje horizontal N-S}
+\begin{frame}[label={sec:orge4093f3}]{Seguidor de eje horizontal N-S}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorEjeHorizontal.jpg}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org0f5465a}]{Seguidor de doble eje}
+\begin{frame}[label={sec:orgcdc2ce5}]{Seguidor de doble eje}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorReocin.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge4b3eef}]{SFCR en edificación}
+\begin{frame}[label={sec:orgb590880}]{SFCR en edificación}
 \begin{itemize}
 \item La integración del sistema fotovoltaico con el edificio exige tener en cuenta muchos factores que condicionan la ubicación y la configuración del generador.
 
@@ -232,7 +232,7 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd8df626}]{Integración arquitectónica}
+\begin{frame}[label={sec:org0b8739d}]{Integración arquitectónica}
 \begin{itemize}
 \item Cubierta Inclinada
 \item Cubierta Plana
@@ -248,44 +248,44 @@ necesarios),
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org0837743}]{Cubierta Inclinada}
+\begin{frame}[label={sec:org23c1286}]{Cubierta Inclinada}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/CubiertaInclinada.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8555a87}]{Cubierta Plana}
+\begin{frame}[label={sec:org3c86fec}]{Cubierta Plana}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/CubiertaPlana.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org6b73c7e}]{Parasol}
+\begin{frame}[label={sec:org11cf1cd}]{Parasol}
 \begin{center}
 \includegraphics[height=0.9\textheight]{/home/oscar/github/esf/figs/Parasol.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf9d3a4c}]{Fachada Acristalada}
+\begin{frame}[label={sec:orge230a5b}]{Fachada Acristalada}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/FachadaAcristalada.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org56c5484}]{Muro Cortina}
+\begin{frame}[label={sec:orgc006d50}]{Muro Cortina}
 \begin{center}
 \includegraphics[height=0.9\textheight]{/home/oscar/github/esf/figs/MuroCortina.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgffa125b}]{Aparcamiento}
+\begin{frame}[label={sec:orgadd42b6}]{Aparcamiento}
 \begin{center}
 \includegraphics[height=0.8\textheight]{/home/oscar/github/esf/figs/Aparcamiento.png}
 \end{center}
 \end{frame}
 
 
-\begin{frame}[label={sec:org9ce31bf}]{SFCR en edificación: CTE-HE5}
+\begin{frame}[label={sec:orgf228bb5}]{SFCR en edificación: CTE-HE5}
 \begin{itemize}
 \item El CTE-HTE5 divide España en cinco zonas climáticas de acuerdo al valor medio anual de la radiación global diaria en el plano horizontal.
 
@@ -295,7 +295,7 @@ necesarios),
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org532b3fd}]{SFCR en edificación: CTE-HE5}
+\begin{frame}[label={sec:org633e962}]{SFCR en edificación: CTE-HE5}
 \begin{itemize}
 \item Potencia \alert{nominal} a instalar
 \end{itemize}
@@ -312,9 +312,9 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{frame}
 
 \subsection{Condiciones técnicas de la conexión}
-\label{sec:org55e081d}
+\label{sec:orgd1f473e}
 
-\begin{frame}[label={sec:orgf816baf}]{SFCR en Edificación: sistemas eléctricos}
+\begin{frame}[label={sec:org923335b}]{SFCR en Edificación: sistemas eléctricos}
 \begin{itemize}
 \item En este tipo de SFCR el diseño de los sistemas eléctricos debe tener en cuenta las canalizaciones previstas o existentes en el edificio.
 
@@ -324,13 +324,13 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orged22203}]{Separación entre comercialización y generación}
+\begin{frame}[label={sec:org0ee3ee6}]{Separación entre comercialización y generación}
 \begin{itemize}
 \item La reglamentación eléctrica española establece la separación administrativa entre la comercialización y la distribución de la energía (así, la empresa que nos vende energía eléctrica en nuestro hogar es distinta a la que compra la energía que produce el sistema que podamos tener en nuestro tejado).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org517b303}]{Generación distribuida}
+\begin{frame}[label={sec:org480fe2e}]{Generación distribuida}
 \begin{itemize}
 \item Por tanto, al menos administrativamente, la generación fotovoltaica y el consumo cercano son dos elementos independientes.
 
@@ -340,7 +340,7 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgaefe414}]{El problema de la medida}
+\begin{frame}[label={sec:org5a1ee1c}]{El problema de la medida}
 \begin{itemize}
 \item La separación existente entre empresa comercializadora y empresa distribuidora se refleja en la separación de contratos y facturas, y por tanto, también de elementos y puntos de medida.
 
@@ -350,7 +350,7 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd9f7c86}]{Ejemplo: suministro en MT}
+\begin{frame}[label={sec:orgf425727}]{Ejemplo: suministro en MT}
 \begin{itemize}
 \item \alert{Titulares con contrato de suministro en Media Tensión con instalaciones fotovoltaicas de potencia menor a 100 kW}
 
@@ -364,7 +364,7 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgc8f2f43}]{Ejemplo: comunidades de vecinos}
+\begin{frame}[label={sec:orgc28c98e}]{Ejemplo: comunidades de vecinos}
 \begin{itemize}
 \item \alert{Titulares en edificios de varias viviendas}
 
@@ -377,11 +377,11 @@ $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 \end{frame}
 
 \section{Inversor de CR}
-\label{sec:org1d824a0}
+\label{sec:org73843dd}
 
 \subsection{Conceptos Generales}
-\label{sec:org43ec866}
-\begin{frame}[label={sec:orga40b9ab}]{Acoplamiento a la red}
+\label{sec:orgc7b9945}
+\begin{frame}[label={sec:org4924b5f}]{Acoplamiento a la red}
 \begin{block}{}
 La potencia suministrada por un generador fotovoltaico iluminado es de
 tensión continua, que debe ser adecuadamente acondicionada para permitir
@@ -391,7 +391,7 @@ conexión a red.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org78303e9}]{Definición}
+\begin{frame}[label={sec:orga6426f3}]{Definición}
 \begin{itemize}
 \item El equipo de acondicionamiento de potencia, denominado inversor DC/AC, realiza la \alert{conversión de continua a alterna cumpliendo con  determinados requisitos} de tensión eficaz, frecuencia, distorsión armónica de las ondas de tensión y corriente, rendimiento instantáneo y medio, seguridad eléctrica, etc.
 
@@ -400,8 +400,8 @@ conexión a red.
 \end{frame}
 
 \subsection{Tipos de Inversores}
-\label{sec:orgefa0a86}
-\begin{frame}[label={sec:org053a7c5}]{Tipos de inversores}
+\label{sec:orgef7adb3}
+\begin{frame}[label={sec:orgb2b9ae5}]{Tipos de inversores}
 A grandes rasgos, los inversores pueden agruparse en tres categorías:
 
 \begin{itemize}
@@ -415,7 +415,7 @@ a una rama del generador.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8ad6694}]{Inversores de Rama}
+\begin{frame}[label={sec:org00b8d3a}]{Inversores de Rama}
 \begin{itemize}
 \item Los \alert{inversores orientados a rama} son particularmente útiles en
 algunos sistemas de integración arquitectónica, al poder adaptarse
@@ -427,7 +427,7 @@ pequeños sistemas demostrativos).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgff96e4e}]{Inversores Centrales}
+\begin{frame}[label={sec:org4f43712}]{Inversores Centrales}
 \begin{itemize}
 \item Los \alert{inversores centrales} son recomendables para instalaciones de
 medio o gran tamaño. Permiten reducir costes (de adquisición,
@@ -440,8 +440,8 @@ de 100 kW o 4 de 250 kW, pero no con 200 de 5 kW).
 \end{frame}
 
 \subsection{Características básicas}
-\label{sec:orgd4320ff}
-\begin{frame}[label={sec:orgeca0d8a}]{Potencia y ventana MPP}
+\label{sec:org1f9a302}
+\begin{frame}[label={sec:orge7478f7}]{Potencia y ventana MPP}
 \begin{itemize}
 \item \alert{Potencia nominal y máxima}, siendo ésta un porcentaje de sobrecarga
 que el equipo es capaz de soportar durante un determinado período de
@@ -453,7 +453,7 @@ algoritmo de búsqueda del MPP del generador fotovoltaico.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgbb0dfb8}]{Tensiones}
+\begin{frame}[label={sec:org1c23bdd}]{Tensiones}
 \begin{itemize}
 \item \alert{Tensión máxima de entrada}: es la máxima tensión que el inversor
 puede aguantar sin sufrir una avería.
@@ -469,7 +469,7 @@ necesaria para que el inversor comience el proceso de conversión.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org6766d62}]{Eficiencia y Rendimiento}
+\begin{frame}[label={sec:org7276242}]{Eficiencia y Rendimiento}
 \begin{itemize}
 \item \alert{Eficiencia máxima}: máximo valor que toma la relación entre potencia
 de salida y potencia de entrada. En inversores de calidad la
@@ -483,8 +483,8 @@ características de la zona centroeuropea.
 \end{itemize}
 \end{frame}
 \subsection{Composición}
-\label{sec:org8fab4c1}
-\begin{frame}[label={sec:org16b498c}]{Entrada}
+\label{sec:org3f7a49b}
+\begin{frame}[label={sec:org5994a1e}]{Entrada}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
 \end{center}
@@ -499,7 +499,7 @@ realizar las funciones de búsqueda del punto de máxima potencia.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0e23626}]{Puente y salida}
+\begin{frame}[label={sec:org72aabfb}]{Puente y salida}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
 \end{center}
@@ -516,7 +516,7 @@ AC.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga6819db}]{Control}
+\begin{frame}[label={sec:org7ed8eed}]{Control}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
 \end{center}
@@ -531,14 +531,14 @@ salida del inversor.
 \end{frame}
 
 \subsection{Funcionamiento}
-\label{sec:org13224a5}
-\begin{frame}[label={sec:org3e11095}]{Modulación SPWM}
+\label{sec:org301913a}
+\begin{frame}[label={sec:org8dc736a}]{Modulación SPWM}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SPWMMonofasico.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8cc9396}]{Busqueda del Punto de Máxima Potencia}
+\begin{frame}[label={sec:orgd1173a0}]{Busqueda del Punto de Máxima Potencia}
 \begin{center}
 \includegraphics[height=0.6\textheight]{../figs/CurvaIV_Ta20_G800.pdf}
 \end{center}
@@ -549,7 +549,7 @@ $$\begin{cases}
       \frac{dP}{dV}<0 & V_{mpp}<V<V_{oc}\end{cases}$$
 \end{frame}
 
-\begin{frame}[label={sec:orge50f93d}]{Busqueda del Punto de Máxima Potencia}
+\begin{frame}[label={sec:orgbf3f932}]{Busqueda del Punto de Máxima Potencia}
 \begin{center}
 \includegraphics[height=0.6\textheight]{../figs/CurvaIV_Ta20_G800.pdf}
 \end{center}
@@ -560,7 +560,7 @@ $$\begin{cases}
       \frac{dI}{dV}<-\frac{I}{V} & V_{mpp}<V<V_{oc}\end{cases}$$
 \end{frame}
 
-\begin{frame}[label={sec:orgc32cae4}]{Transformador de salida}
+\begin{frame}[label={sec:org92c151f}]{Transformador de salida}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/InversorPV.pdf}
 \end{center}
@@ -578,7 +578,7 @@ y la salida (AC).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org6a75096}]{Opciones comerciales}
+\begin{frame}[label={sec:orgcfb4449}]{Opciones comerciales}
 Existen tres opciones en el mercado de inversores de conexión a red:
 
 \begin{itemize}
@@ -590,7 +590,7 @@ Existen tres opciones en el mercado de inversores de conexión a red:
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga8854c8}]{Normativa relativa al transformador}
+\begin{frame}[label={sec:orgb80b605}]{Normativa relativa al transformador}
 La normativa vigente en España obliga al uso de un transformador de aislamiento o elemento equivalente para cumplir tres objetivos:
 
 \begin{enumerate}
@@ -602,7 +602,7 @@ La normativa vigente en España obliga al uso de un transformador de aislamiento
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:orga2abb19}]{Normativa: Nota de Interpretación Tecnica}
+\begin{frame}[label={sec:org75dd020}]{Normativa: Nota de Interpretación Tecnica}
 \begin{itemize}
 \item Objetivos 1 y 2 se consiguen mediante la adecuada conexión de masas y tierras en el sistema.
 
@@ -611,14 +611,14 @@ La normativa vigente en España obliga al uso de un transformador de aislamiento
 \end{frame}
 
 \subsection{Islanding}
-\label{sec:org75d5384}
-\begin{frame}[label={sec:org124ff66}]{Definición del problema}
+\label{sec:orgd85591a}
+\begin{frame}[label={sec:org441f797}]{Definición del problema}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Isla.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org31b8e32}]{Ecuaciones básicas}
+\begin{frame}[label={sec:orge145cb9}]{Ecuaciones básicas}
 Antes de la desconexión:$$\Delta P=P_{carga}-P_{PV}$$
 
 $$\Delta Q=Q_{carga}-Q_{PV}\simeq Q_{carga}$$
@@ -630,7 +630,7 @@ $$P_{carga}=\frac{V^{2}}{R_{carga}}$$
 $$Q_{carga}=\frac{V^{2}}{\omega L}-V^{2}\omega C$$
 \end{frame}
 
-\begin{frame}[label={sec:orgfbc3a11}]{Casos posibles}
+\begin{frame}[label={sec:orgf060fc5}]{Casos posibles}
 \begin{itemize}
 \item \(\Delta P^{-}>0\rightarrow P_{carga}>P_{PV}\). Al producirse la
 desconexión, dado que \(P_{PV}\) no cambia, disminuye la potencia
@@ -650,7 +650,7 @@ reactiva debe tender a cero, y por tanto disminuye la frecuencia.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org55794b6}]{Ventana de no-detección}
+\begin{frame}[label={sec:orgfaf4f0f}]{Ventana de no-detección}
 Cuando las condiciones de trabajo del generador y el consumo antes de la
 desconexión son muy cercanas, existe una ventana de no-detección.
 
@@ -661,7 +661,7 @@ desconexión son muy cercanas, existe una ventana de no-detección.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org276765b}]{Estudio experimental IEA-PVPS}
+\begin{frame}[label={sec:org3ff395f}]{Estudio experimental IEA-PVPS}
 \begin{itemize}
 \item La probabilidad de que se de una situación de balance entre consumo y
 generación en una red de Baja Tensión está entre \(\num{1e-5}\) y
@@ -673,7 +673,7 @@ de estos dos sucesos es virtualmente nula.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org29de8f9}]{Estudio experimental IEA-PVPS}
+\begin{frame}[label={sec:org4f5cad7}]{Estudio experimental IEA-PVPS}
 \begin{itemize}
 \item El riesgo eléctrico existente en cualquier red eléctrica es del orden
 de \(\num{1e-6}\).
