--- a/diapos/SFCR_ProductividadSombras.tex
+++ b/diapos/SFCR_ProductividadSombras.tex
@@ -1,4 +1,4 @@
-% Created 2018-01-08 lun 14:48
+% Created 2018-01-08 lun 20:02
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -48,34 +48,34 @@
 \maketitle
 
 \section{Energía Producida por un SFCR}
-\label{sec:org863409c}
+\label{sec:org8bff63b}
 
 \subsection{Procedimiento de cálculo}
-\label{sec:orge6ea764}
+\label{sec:orge42b5de}
 
-\begin{frame}[label={sec:orga8f099c}]{Potencia en un SFCR}
+\begin{frame}[label={sec:org3986dce}]{Potencia en un SFCR}
 \begin{itemize}
-\item Potencia a la Salida del Generador FV
+\item \alert{Potencia} a la Salida del Generador FV
 \end{itemize}
 
 $$P_{dc} = A_g \cdot \eta_g(G_{ef}, T_a) \cdot  G_{ef} = %
       \frac{\eta_g(G_{ef}, T_a)}{\eta_g^*} \cdot \frac{G_{ef}}{G^*} \cdot P_g^*$$
 
 \begin{itemize}
-\item Potencia a la Salida del Inversor
+\item \alert{Potencia} a la Salida del Inversor
 \end{itemize}
 
 $$P_{ac} = P_{dc} \cdot \eta_{inv}(P_{dc}, V_{dc}) =  P_{dc} \cdot \eta_{inv}(G_{ef}, T_a)$$
 
 \begin{itemize}
-\item Energía Producida por un SFCR
+\item \alert{Energía} Producida por un SFCR
 \end{itemize}
 
 $$E_{ac} = \int_T \frac{\eta_g(G_{ef}, T_a)}{\eta_g^*} \cdot
-      \frac{G_{ef}}{G^*} \cdot \eta_{inv}(G_{ef}, T_a) \cdot P_g^* \mathrm{dt}$$
+      \frac{G_{ef}}{G^*} \cdot \eta_{inv}(G_{ef}, T_a) \cdot P_g^*\quad \mathrm{dt}$$
 \end{frame}
 
-\begin{frame}[label={sec:orgd8c738b}]{Energía producida}
+\begin{frame}[label={sec:orge3c641e}]{Energía producida}
 $$E_{ac}=P_{g}^{*}\cdot\frac{G_{ef}}{G^*}\cdot PR\cdot (1-FS)$$
 
 \begin{itemize}
@@ -97,31 +97,31 @@ generador
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org23e716d}]{Productividad}
+\begin{frame}[label={sec:orgce93aa1}]{Productividad}
 En algunas ocasiones se habla de \alert{productividad} del sistema, \(Y_{f}\),
 que es el cociente entre energía producida y potencia nominal del
-sistema:
+\alert{generador}:
 $$Y_{f}=\frac{E_{ac}}{P_{g}^{*}}\,(\si{\kilo\watthour\per\kilo\wattpeak})$$
 \end{frame}
 
-\begin{frame}[label={sec:org7a7a479}]{Performance Ratio}
+\begin{frame}[label={sec:orge4c36a0}]{Performance Ratio}
 \begin{itemize}
-\item Está concebido para incluir todas las pérdidas que no tienen
-dependencia con las condiciones meteorológicas.
+\item Está concebido para incluir todas las \alert{pérdidas que no tienen
+dependencia con las condiciones meteorológicas}.
 
-\item Este factor \guillemotleft{}puede\guillemotright{} caracterizar el funcionamiento de un sistema
-independientemente de la localidad.
+\item Este factor \emph{puede} caracterizar el funcionamiento de un sistema
+\alert{independientemente de la localidad}.
 
 \item En sentido estricto no es cierto porque sí hay relación con la
 meteorología del lugar.
 
 \item Sin embargo, dado que estos factores son de segundo orden comparados
-con la relación entre potencia e irradiancia, suele aceptarse que el
-PR sirve para caracterizar la calidad de un sistema fotovoltaico.
+con la relación entre potencia e irradiancia, \alert{suele aceptarse} que el
+\alert{PR} sirve para caracterizar la \alert{calidad de un sistema fotovoltaico}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org9093a0b}]{Performance Ratio}
+\begin{frame}[label={sec:orga49c0ae}]{Performance Ratio}
 \begin{block}{Desglose de pérdidas}
 \begin{itemize}
 \item \alert{Dispersión de parámetros} entre los módulos que componen el
@@ -143,20 +143,24 @@ características nominales (3\%)
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgcc3c0e4}]{Performance Ratio}
+\begin{frame}[label={sec:org9441995}]{Performance Ratio}
 \begin{block}{Valores reales}
 \begin{itemize}
 \item El análisis de funcionamiento de diversos sistemas FV europeos ha
 mostrado que el rango de valores que toma el \emph{performance ratio} es
 bastante amplio, con mínimos de 0,4 y máximos de 0,85.
 
-\item Para sistemas instalados desde 1996, \alert{el valor promedio ha sido de
-0,74}.
+\item Para sistemas instalados entre 1980 a 1990, \alert{el valor promedio ha sido de
+0,7}.
+
+\item Para sistemas instalados entre 2005 a 2012, \alert{el valor promedio ha
+sido de 0,8}.
 \end{itemize}
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org0811294}]{Factor de sombras}
+
+\begin{frame}[label={sec:org0f210f0}]{Factor de sombras}
 \begin{itemize}
 \item \alert{El factor de sombras suele tomar valores alrededor del 2 al 4\%},
 tanto en instalaciones estáticas como de seguimiento.
@@ -168,27 +172,27 @@ con un nivel de ocupación de terreno superior al óptimo).
 \end{frame}
 
 \section{Sombras y ocupación de terreno}
-\label{sec:orgd37ec3e}
+\label{sec:org034ca68}
 
 \subsection{Sombras Lejanas}
-\label{sec:org45f422e}
+\label{sec:orgc5a95dc}
 
-\begin{frame}[label={sec:org86132fc}]{Sombras en el horizonte}
+\begin{frame}[label={sec:org3114dca}]{Sombras en el horizonte}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SombraIES.pdf}
 \end{center}
 \end{frame}
 
 \subsection{Sombras Cercanas: sistemas estáticos}
-\label{sec:org99b7826}
+\label{sec:orgcd6f3b7}
 
-\begin{frame}[label={sec:org5ef3b39}]{Sombras entre filas}
+\begin{frame}[label={sec:org31ca642}]{Sombras entre filas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SombraEstaticaInclinado2.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgaabd30f}]{Sombras entre filas}
+\begin{frame}[label={sec:org3be7dcf}]{Sombras entre filas}
 \begin{itemize}
 \item Suele establecerse un objetivo de \alert{4 horas de sol en torno al mediodía del solsticio de invierno libres de sombra}.
 
@@ -205,21 +209,21 @@ $$d_{min}=\frac{h}{\tan(61\degree-\phi)}$$
 \end{frame}
 
 \subsection{Sombras Cercanas: sistemas de seguimiento}
-\label{sec:orge9a931f}
+\label{sec:org5338d40}
 
-\begin{frame}[label={sec:org2e4ae37}]{Separación de seguidores Doble Eje}
+\begin{frame}[label={sec:org2604323}]{Separación de seguidores Doble Eje}
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/Sombras2X.pdf}
 \end{center}
 
 \begin{columns}
-\begin{column}{6cm\columnwidth}
+\begin{column}{0.6\columnwidth}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DimensionesSeguidorSombra.pdf}
 \end{center}
 \end{column}
 
-\begin{column}{4cm\columnwidth}
+\begin{column}{0.4\columnwidth}
 $$b=\frac{L}{W}$$ 
 $$ROT=\frac{L_{ns}\cdot L_{eo}}{b}$$
 
@@ -228,7 +232,26 @@ $$E_{ac}=f(ROT)??$$
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgcc3194e}]{Separación de Seguidores Doble Eje}
+\begin{frame}[label={sec:orge2ef074}]{Radiación promedio}
+$$G_{ef, av} = 1/24 \cdot \left( 10 \cdot G_{ef,0} + 5 \cdot G_{ef,A} + G_{ef,B} + 2 \cdot G_{ef,C} + G_{ef,D} + 5 \cdot G_{ef,E} \right)$$
+
+\begin{columns}
+\begin{column}{0.4\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/plantConfiguration.pdf}
+\end{center}
+\end{column}
+
+\begin{column}{0.6\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/6trackers.pdf}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}[label={sec:org04fd5c5}]{Separación de Seguidores Doble Eje}
 $$b=\frac{L}{W}=0.475$$
 
 $$ROT=\frac{L_{ns}\cdot L_{eo}}{b}$$
@@ -240,9 +263,9 @@ $$ROT=\frac{L_{ns}\cdot L_{eo}}{b}$$
 
 
 \subsection{Seguidores de eje horizontal NS}
-\label{sec:orgf48cfd8}
+\label{sec:orgca15f7f}
 
-\begin{frame}[label={sec:org0c2f830}]{Separación de Seguidores Eje Horizontal}
+\begin{frame}[label={sec:org0c03306}]{Separación de Seguidores Eje Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SombrasHoriz.pdf}
 \end{center}
@@ -250,13 +273,13 @@ $$ROT=\frac{L_{ns}\cdot L_{eo}}{b}$$
 $$W=\infty$$ $$ROT=L_{eo}/L$$
 \end{frame}
 
-\begin{frame}[label={sec:org81d1dfe}]{Separación de Seguidores Horizontal N-S}
+\begin{frame}[label={sec:orgd375aca}]{Separación de Seguidores Horizontal N-S}
 \begin{center}
 \includegraphics[angle=90,width=.9\linewidth]{../figs/AbacoSeguidorHorizSombra_Ene10.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org505ddb0}]{Backtracking}
+\begin{frame}[label={sec:orgd142f38}]{Backtracking}
 \begin{itemize}
 \item El \alert{sombreado} en un generador puede producir problemas por el efecto
 de \alert{punto caliente}.
@@ -279,22 +302,37 @@ la \alert{horizontal en la noche}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org70e8e3a}]{Backtracking}
+\begin{frame}[label={sec:orgaebb680}]{Backtracking}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/BackTracking.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org6539702}]{Separación con backtracking}
+\begin{frame}[label={sec:org3ea4ac6}]{Separación con backtracking}
 \begin{center}
 \includegraphics[angle=90,width=.9\linewidth]{../figs/AbacoHorizBT_Ene10.pdf}
 \end{center}
 \end{frame}
 
-\subsection{Elección de separaciones}
-\label{sec:org1e2d8f2}
+\begin{frame}[label={sec:orgc6bab87}]{Limitación de ángulo}
+\begin{itemize}
+\item Es habitual limitar el ángulo de inclinación a valores máximos alrededor de 70° por motivos estructurales (protección frente al viento)
 
-\begin{frame}[label={sec:orgfd0b80a}]{Elección de separaciones}
+\item Implica un desvio de los seguidores de su posición óptima.
+
+\begin{itemize}
+\item Sombras más cortas que en el caso teórico (red más densa).
+
+\item Reducción en la energía generada por incidencia no perpendicular
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+\subsection{Elección de separaciones}
+\label{sec:org7d67e35}
+
+
+\begin{frame}[label={sec:org7f86b5d}]{Elección de separaciones}
 La \alert{separación óptima} entre elementos (seguidores o estructuras
 estáticas) es aquella que conduce al \alert{mínimo valor del coste de la
 energía} producida por el sistema:
@@ -312,7 +350,7 @@ zanjas).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org44ad279}]{Elección de separaciones}
+\begin{frame}[label={sec:org3b5127b}]{Elección de separaciones}
 \begin{itemize}
 \item Esta separación óptima \alert{depende} de las \alert{estructuras elegidas} y de
 las \alert{condiciones económicas} de los elementos.
@@ -322,61 +360,24 @@ condiciones del terreno} (fronteras, irregularidades, vaguadas, etc.)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org9d82c54}]{Radiación promedio}
-$$G_{ef, av} = 1/24 \cdot \left( 10 \cdot G_{ef,0} + 5 \cdot G_{ef,A} + G_{ef,B} + 2 \cdot G_{ef,C} + G_{ef,D} + 5 \cdot G_{ef,E} \right)$$
 
+
+\begin{frame}[label={sec:org721b78f}]{ROT y Coste de la energía producida}
 \begin{columns}
-\begin{column}{5cm\columnwidth}
-\begin{center}
-\includegraphics[width=.9\linewidth]{../figs/plantConfiguration.pdf}
-\end{center}
-\end{column}
-
-\begin{column}{7cm\columnwidth}
-\begin{center}
-\includegraphics[width=.9\linewidth]{../figs/6trackers.pdf}
-\end{center}
-\end{column}
-\end{columns}
-\end{frame}
-
-\begin{frame}[label={sec:org2976ae9}]{Cableado}
-\begin{columns}
-\begin{column}{5cm\columnwidth}
-\begin{center}
-\includegraphics[width=.9\linewidth]{../figs/wiring.pdf}
-\end{center}
-\end{column}
-\begin{column}{6cm\columnwidth}
-$$\begin{aligned}
-    \Delta U_{inv} &= \frac{\Delta U}{1+\sqrt{\frac{\sum_{i=1}^n
-          L_{i}^2 \cdot I_{i}}{L_{inv}^2 \cdot I_{inv}}}} \\
-    \Delta U_{inv} &+ \Delta U_i = \Delta U\\
-    S_{inv} &= 2 \cdot \rho \cdot \frac{L_{inv} \cdot
-      I_{inv}}{\Delta U_{inv}} \\
-    S_{i} &= 2 \cdot \rho \cdot \frac{L_{i} \cdot I_i}{\Delta U_i}
-  \end{aligned}$$
-\end{column}
-\end{columns}
-\end{frame}
-
-
-\begin{frame}[label={sec:orgaada4a5}]{Coste de la energía producida}
-\begin{columns}
-\begin{column}{5cm\columnwidth}
+\begin{column}{0.4\columnwidth}
 \begin{itemize}
 \item Coste Energía
-$$C_E &= \frac{C_P}{E_{AC}}$$
+$$C_E = \frac{C_P}{E_{AC}}$$
 \item Coste Sistema
-$$C_p &= C_c + C_A + C_{PV}$$
+$$C_p = C_c + C_A + C_{PV}$$
 
-\item \(C_{PV}\) entre \(\SI{2.5}{\text{\texteuro}\per\watt}\) y \(\SI{5}{\text{\texteuro}\per\watt}\)
+\item \(C_{PV}\) entre \(\SI{2.5}{\text{\texteuro}\per\watt}\) y \(\SI{5}{\text{\texteuro}\per\watt}\) (\emph{antiguo})
 
 \item \(C_A\) entre \(\SI{1.5}{\text{\texteuro}\per\meter\squared}\) y \(\SI{4}{\text{\texteuro}\per\meter\squared}\)
 \end{itemize}
 \end{column}
 
-\begin{column}{7cm\columnwidth}
+\begin{column}{0.8\columnwidth}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/GRRoptim.pdf}
 \end{center}
@@ -385,9 +386,9 @@ $$C_p &= C_c + C_A + C_{PV}$$
 \end{frame}
 
 \section{Resumen}
-\label{sec:org5772576}
+\label{sec:org23a1775}
 
-\begin{frame}[label={sec:orgd581fbf}]{Ocupación de terreno y productividad}
+\begin{frame}[label={sec:org05d99a8}]{Ocupación de terreno y productividad}
 \begin{center}
 \begin{tabular}{lrl}
 SFCR & ROT & Productividad\\
